--- a/style.css
+++ b/style.css
@@ -1841,8 +1841,8 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .bg-manifesto-20bg-208{
 	background-image:url("img/manifesto%20bg%208.svg");
 }
-.bg-member-20logo{
-	background-image:url("img/member%20logo.svg");
+.bg-member-20bg-20v2{
+	background-image:url("img/member%20bg%20v2.svg");
 }
 
 
